Assignment 4 Part 1 done

--- a/Assignment3/CMakeLists.txt
+++ b/Assignment3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment3)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Assignment3 main.cpp SortingMethods.h SortingMethods.cpp)
+add_executable(Assignment3 main.cpp BubbleSort.cpp BubbleSort.h SortingMethods.h SortingMethods.cpp SelectionSort.cpp SelectionSort.h InsertionSort.cpp InsertionSort.h ShellSort.cpp ShellSort.h MergeSort.cpp MergeSort.h QuickSort.cpp QuickSort.h SortingOutput.cpp SortingOutput.h)
