--- a/Assignment4/CMakeLists.txt
+++ b/Assignment4/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment4)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Assignment4 main.cpp SequentialSearch.cpp SequentialSearch.h BinarySearch.cpp BinarySearch.h BinarySearchTree.cpp BinarySearchTree.h)
+add_executable(Assignment4 main.cpp SequentialSearch.cpp SequentialSearch.h BinarySearch.cpp BinarySearch.h BinarySearchTree.cpp BinarySearchTree.h Node.h)
