--- a/Assignment5/CMakeLists.txt
+++ b/Assignment5/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment5)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Assignment5 main.cpp FileHandler.cpp FileHandler.h HashTable.cpp HashTable.h HashNode.h)
+add_executable(Assignment5 main.cpp FileHandler.cpp FileHandler.h HashTable.cpp HashTable.h HashNode.h LinkedList.cpp LinkedList.h)
